fixed alignment of placeholder

--- a/src/issue_tracker.scss
+++ b/src/issue_tracker.scss
@@ -43,6 +43,10 @@
 .dashlet-issues {
   display: flex;
   flex-direction: column;
+
+  .placeholder {
+    padding: 0;
+  }
 }
 
 .list-issues-container {
